# Forecast

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/: config.yaml  logging.yaml
data/raw/: vendas_historicas.csv
notebooks/: 00_quickstart.ipynb
src/: cli.py
src/core/: io.py  logging_utils.py  utils.py
src/data_prep/: data_preparation.py  feature_engineering.py
src/disaggregation/: disaggregation.py
src/forecast/: baselines.py  evaluate.py  forecasting_pipeline.py  model_selection.py  train_models.py  ts_models.py
src/optimization/: optimization_plan.py
src/rrp/: rrp_analysis.py
src/viz/: visualization.py
tests/: conftest.py  test_data_prep.py  test_forecast.py  test_optimization.py  test_rrp.py
