[metadata]
name = tcc-sop-modular
version = 0.1.0

[options]
packages = find:
install_requires =
    pandas
    numpy
    matplotlib
    scikit-learn
    xgboost
    statsmodels
    pulp
    pyyaml
    joblib
    python-dateutil

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv

[tool:pytest]
testpaths = tests
